# wasi-llama.cpp

./: .gitignore  .gitmodules  CMakeLists.txt  GGML-CMakeLists.txt  Makefile  README.md  ggml.patch  llama.cpp.patch
src/: main.cpp  wasi-threads.cpp
